crates/general/fixtures/invalid/type_union_payload_equals.zt
Bad :: type {
  #some = Int;
};

#unit
